feat: new employee endpoints
